<resources>
        <string name="app_name">Agencia de Viajes</string>

        <string name="brand_name">Agencia de Viajes</string>
        <string name="correo_hint">Correo</string>
        <string name="password_hint">Contraseña</string>
        <string name="iniciar_sesion">Iniciar sesión</string>
        <string name="ir_a_registro">Ir a registro</string>
        <string name="registrarse">Registrarse</string>
        <string name="no_cuenta">¿No tienes cuenta?</string>

        <string name="campo_obligatorio">Campo obligatorio</string>
        <string name="login_error">No fue posible iniciar sesión: %1$s</string>

        <string name="btn_login">Ingresar</string>
        <string name="btn_registro">Ir a registro</string>

        <string name="agregar_destino">Agregar Destino</string>
        <string name="nombre_destino">Nombre del destino</string>
        <string name="pais">País</string>
        <string name="precio">Precio</string>
        <string name="descripcion">Descripción</string>
        <string name="descripcion_min_20">mínimo 20 caracteres</string>
        <string name="imagen_destino">Imagen del destino</string>
        <string name="seleccionar_imagen">Seleccionar imagen</string>
        <string name="guardar">Guardar</string>
        <string name="url_imagen">URL de imagen</string>
        <string name="imagen_invalida">URL de imagen inválida</string>
        <string name="cargada_ok">Imagen cargada</string>

        <string name="catalogo_destinos">Catálogo de Destinos</string>
        <string name="add_destino">Agregar Destino</string>

</resources>